add router and input files
